--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,6 +3,10 @@ on:
     branches: ["main"]
   pull_request: 
     branches: ["main"]
+    
+env:
+  AZURE_WEBAPP_NAME: sharebook-api
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
 
 jobs:
   build:
