--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
+    - name: Clean
+      run: dotnet clean
+
     - name: Restore dependencies
       run: dotnet restore
 
