--- a/src/Sharebook.API/Properties/launchSettings.json
+++ b/src/Sharebook.API/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Sharebook.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "hangfire",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -13,7 +13,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "hangfire",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
