--- a/src/Sharebook.API/Sharebook.API.csproj
+++ b/src/Sharebook.API/Sharebook.API.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>0e5730af-8fc8-4995-b6a5-d28e7fcf37bb</UserSecretsId>
@@ -16,6 +16,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.8.22" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />		
 	</ItemGroup>
 
